spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-reactive-discoveryclient-it/src/test/resources/spring-cloud-kubernetes-discoveryserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-kubernetes-discoveryserver-deployment
spec:
  selector:
    matchLabels:
      app: spring-cloud-kubernetes-discoveryserver
  template:
    metadata:
      labels:
        app: spring-cloud-kubernetes-discoveryserver
    spec:
      serviceAccountName: spring-cloud-kubernetes-serviceaccount
      containers:
        - name: spring-cloud-kubernetes-discoveryserver
          image: docker.io/springcloud/spring-cloud-kubernetes-discoveryserver
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8761
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8761
              path: /actuator/health/liveness
          ports:
            - containerPort: 8761
